# opengl_gravity_simulation

./: CMakeLists.txt  main.cpp  main_console.cpp
assets/shaders/: blue.frag  color_from_2texture.frag  color_from_2texture_four.frag  color_from_2texture_larger.frag  color_from_2texture_ratio.frag  color_fromformer3.frag  combined_phong.frag  diffuse.frag  from_2texture.frag  from_2texture_ratio.frag  illuminant_white.frag  light.frag  location_and_color.vert  move.vert  phong_with_texture.frag  place_position.vert  pos_and_normal.vert  pos_color_texcoord.vert  to_red.vert  uniform_color.frag  view_combined_phong.frag  view_pos_and_normal.vert
assets/shaders/light/: lighting_maps.frag  lighting_maps.vert  lighting_maps_emission.frag
src/: Camera.cpp  Camera.h  Shader.cpp  Shader.h
src/physics/: GravityObject.cpp  GravityObject.h  PhysicCtrl.cpp  PhysicsCtrl.h  PhysicsObject.cpp  PhysicsObject.h  Planet.cpp  Planet.h  Simulation.cpp  Simulation.h  StaticObject.cpp  StaticObject.h
